<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Muslim Day</string>

    <string name="notificationContent">Have you been a good model of Islam today?</string>

    <string name="shortFormatPattern">E, MMM d</string>
    <string name="hijriShortFormatPattern">E d</string>

    <string name="assessment">Daily Assessment</string>
    <string name="progress">Progress Tracker</string>
    <string name="guide">Guide</string>

    <string name="menuAssessment">Assessment</string>
    <string name="menuProgress">Progress</string>
    <string name="menuGuide">Guide</string>

    <string name="preferences">Preferences</string>
    <string name="menu_edit">Edit List</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!-- Selections -->
    <string name="done">Done, Thanks to ALLAH</string>
    <string name="missedWithExcuse">Missed for an excuse</string>
    <string name="missedWithoutExcuse">Missed with no excuse</string>
    <string name="notYet">Not yet</string>

    <!-- Settings -->
    <string name="language">Language</string>
    <string name="currentLanguage">English</string>
    <string-array name="languageNames" translatable="false">
        <item>عربي</item>
        <item>English</item>
    </string-array>
    <string-array name="languageValues" translatable="false">
        <item>ar</item>
        <item>en</item>
    </string-array>

    <string name="restart">App will restart with changes applied</string>
    <string name="res_yes">OK</string>
    <string name="res_no">Cancel</string>

    <string name="sync_title">Auto Sync</string>
    <string name="sync_setting_summary">Sync data between devices</string>

    <string name="notificationSettingTitle">Reminder Notification</string>
    <string name="notificationSettingSummary">Show daily notification as a reminder</string>

    <!-- Preferences -->
    <string name="genderTitle">Congregation Prayer</string>
    <string name="fastingTitle">Voluntary Fasting</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="comma">, </string>

    <!-- Sync -->
    <string name="saved">Saved</string>
    <string name="updating">Updating .. Please wait</string>
    <string name="no_change">Up to date</string>
    <string name="sync_dialog">Sync with other devices</string>
    <string name="sync_description">This option allows you to synchronize your daily selections between your different Android devices by saving it to your Google account. Please note that this option will access the Internet Make sure you are connected through Wi-Fi</string>
    <string name="sync_error">Error while syncing</string>

    <!-- Edit section -->
    <string name="edit">Edit</string>
    <string name="add">Add new item</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="reset">Restore Defaults</string>
    <string name="confirmReset">This will restore list to original application defaults. Are you sure you want to continue?</string>
    <string name="confirmSave">Save changes?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="selectDaysTitle">Active days</string>
    <string name="selectDaysText">Select days when you want to show this task</string>

    <!-- About dialog -->
    <string name="about_content1">This application is intended to help Muslims evaluate their daily activities on the way to imitate the lifestyle of the prophet Muhammad (Peace be upon him) in Religion and life</string>

    <!-- Accessibility -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="navigation_drawer_header" translatable="false">Navigation drawer header image</string>
    <string name="app_logo" translatable="false">Application logo in navigation drawer header</string>
    <string name="selection" translatable="false">Touch to change selection for this item</string>
    <string name="guide_entry" translatable="false">Touch to go to guide entry for this item</string>
    <string name="reorderHandle">Press and hold to move item</string>
    <string name="edit_text_hint"> </string>
    <string name="statistics">Show statistics</string>
    <string name="user_profile">User profile picture</string>

    <string name="min" translatable="false">0</string>

    <string name="added">Item was added to the end of the list</string>
    <string name="fastingPreference">You can change fasting days from \'Preferences\'</string>
    <string name="deleted">Item deleted</string>
    <string name="undo">Undo</string>
    <string name="noChanges">No changes</string>
    <string name="signOut">Sign out</string>
    <string name="signedOut">Signed out successfully</string>
    <string name="welcome">Welcome,</string>
    <string name="signedIn">Signed in successfully</string>
    <string name="notSignedIn">Did not sign in</string>
    <string name="confirmSignOut">By signing out, your selections and changes will not be synced with other devices</string>
    <string name="no_sig_in_confirm">By not signing in, your selections and changes will not be synced with other devices</string>
    <string name="signIn">Sign in</string>
    <string name="hidden">Item is now hidden from the daily list</string>
    <string name="helpWebsite">https://amrabed.github.io/MuslimDay/en/help</string>
    <string name="hijriCalendar">Hijri Calendar</string>
    <string name="reminder">Reminder</string>
    <string name="taskName">Task name</string>
    <string name="emptyName">Task name cannot be empty</string>

    <string-array name="progress">
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
        <item>Duration</item>
    </string-array>
    <string-array name="currentPeriod">
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
        <item>Current Duration</item>
    </string-array>
    <string-array name="previousPeriod">
        <item>Last Week</item>
        <item>Last Month</item>
        <item>Last Year</item>
        <item>Previous Duration</item>
    </string-array>
</resources>