<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:hint="@string/taskName"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:paddingStart="@dimen/defaultMargin"
            android:paddingTop="@dimen/defaultMargin"
            android:paddingEnd="@dimen/defaultMargin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/days"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:drawableStart="@drawable/ic_cal"
            android:drawablePadding="@dimen/defaultMargin"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/defaultMargin"
            android:paddingEnd="@dimen/defaultMargin"
            android:text="@string/selectDaysTitle"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <LinearLayout
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/defaultMargin"
            android:paddingEnd="@dimen/defaultMargin"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:drawableStart="@drawable/ic_notifications"
                android:drawablePadding="@dimen/defaultMargin"
                android:text="@string/reminder"
                android:textAppearance="?android:attr/textAppearanceListItem" />

            <Switch
                android:id="@+id/reminderSwitch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/defaultMargin"
        android:src="@drawable/ic_save" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>